--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,57 @@
-* {
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+:root {
+  --gray-bg: #e0e0e0;
+  --blue-primary: #0288d1;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.container {
+  width: 70%;
+  background-color: aqua;
+  margin: 0 auto;
+}
+
+.header {
+  margin-top: -5px;
+}
+
+.header::before {
+  content: " ";
+  width: 100%;
+  height: 10px;
+  display: inline-block;
+  background-color: var(--blue-primary);
+}
+
+.menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--gray-bg);
+  padding: 10px 30px;
+}
+
+.menu_items {
+  display: flex;
+  justify-content: space-between;
+}
+
+.menu_item {
+  margin-left: 2rem;
+  color: var(--blue-primary);
 }
