--- a/styles/style.css
+++ b/styles/style.css
@@ -20,10 +20,17 @@
 
 a {
   text-decoration: none;
+  color: var(--blue-primary);
 }
 
 ul {
   list-style-type: none;
+}
+
+h3,
+h2,
+h1 {
+  color: var(--blue-primary);
 }
 
 /* container */
@@ -55,10 +62,6 @@ ul {
   padding: 0 30px;
 }
 
-.menu_title {
-  color: var(--blue-primary);
-}
-
 .menu_items {
   display: flex;
   justify-content: space-between;
@@ -66,7 +69,6 @@ ul {
 
 .menu_item {
   margin: 0 1rem;
-  color: var(--blue-primary);
 }
 
 .item {
@@ -97,7 +99,6 @@ article {
 
 .main_title {
   font-size: 3rem;
-  color: var(--blue-primary);
 }
 
 .author {
@@ -122,10 +123,6 @@ article {
   margin-bottom: 30px;
 }
 
-.whats_html_title {
-  color: var(--blue-primary);
-}
-
 .post_caption {
   font-size: 20px;
   line-height: 1.5;
@@ -146,17 +143,12 @@ article {
   padding-left: 40px;
 }
 
-.whats_html_link {
-  color: var(--blue-primary);
-}
-
 /* learn html */
 
 .learn_html {
   margin: 30px 0;
 }
 .html_learn_title {
-  color: var(--blue-primary);
   margin-bottom: 30px;
 }
 
