--- a/styles/style.css
+++ b/styles/style.css
@@ -99,6 +99,13 @@ article {
 
 .main_title {
   font-size: 3rem;
+  display: inline;
+}
+
+.top_span {
+  background-color: yellow;
+  padding: 5px 5px;
+  font-weight: bold;
 }
 
 .author {
@@ -201,6 +208,15 @@ aside {
 .aside_title {
   margin: 50px 0 30px 0;
   padding-left: 0;
+}
+
+/* button */
+
+button {
+  position: fixed;
+  right: 1%;
+  bottom: 2%;
+  padding: 0.5rem;
 }
 
 /* footer */
