--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* asign varieable */
@@ -17,6 +16,11 @@
 }
 
 /* reset style */
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  border-top: 10px solid var(--blue-primary);
+}
 
 a {
   text-decoration: none;
@@ -41,18 +45,6 @@ h1 {
 }
 
 /* header */
-
-.header {
-  margin-top: -5px;
-}
-
-.header::before {
-  content: " ";
-  width: 100%;
-  height: 10px;
-  display: inline-block;
-  background-color: var(--blue-primary);
-}
 
 .menu {
   display: flex;
@@ -87,7 +79,7 @@ h1 {
 /* main */
 
 .main {
-  display: flex;
+  display: grid;
   margin-top: 50px;
 }
 
